38. Configuración de appSettings

--- a/Web.config
+++ b/Web.config
@@ -19,5 +19,13 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <!-- configuración base de datos en some.com -->
+  <appSettings>
+    <add key="ipBaseDatos" value="."/><!-- . es localhost -->
+    <add key="nombreBaseDatos" value="serviciosx"/>
+    <add key="usuarioBaseDatos" value="JuanBustos_SQLLogin_1"/>
+    <add key="passwordBaseDatos" value="pjcxkxnor3"/>
+    <add key="timeOutSqlServer" value="90"/>
+  </appSettings>
 
 </configuration>
