--- a/Web.config
+++ b/Web.config
@@ -19,7 +19,7 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-  <!-- configuración base de datos en some.com -->
+  <!-- configuración base de datos en somee.com -->
   <appSettings>
     <add key="ipBaseDatos" value="."/><!-- . es localhost -->
     <add key="nombreBaseDatos" value="serviciosx"/>
