--- a/Servicios.csproj
+++ b/Servicios.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="system\DataJson.cs" />
+    <Compile Include="system\DatosEnlace.cs" />
     <Compile Include="system\Equipos.cs" />
     <Compile Include="system\Funciones.cs" />
     <Compile Include="WebService.asmx.cs">
