--- a/Servicios.csproj
+++ b/Servicios.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="system\DataJson.cs" />
     <Compile Include="system\DatosEnlace.cs" />
+    <Compile Include="system\EnlaceSqlServer.cs" />
     <Compile Include="system\Equipos.cs" />
     <Compile Include="system\Funciones.cs" />
     <Compile Include="WebService.asmx.cs">
