46. Método que retorna una tabla de la base en formato JSON - P3

--- a/Web.config
+++ b/Web.config
@@ -19,9 +19,9 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-  <!-- configuración base de datos en somee.com -->
+  <!-- configuración base de datos en somee.com SQL SERVER 2019 -->
   <appSettings>
-    <add key="ipBaseDatos" value="."/><!-- . es localhost -->
+    <add key="ipBaseDatos" value="serviciosx.mssql.somee.com"/><!-- . es localhost -->
     <add key="nombreBaseDatos" value="serviciosx"/>
     <add key="usuarioBaseDatos" value="JuanBustos_SQLLogin_1"/>
     <add key="passwordBaseDatos" value="pjcxkxnor3"/>
