--- a/Web.config
+++ b/Web.config
@@ -21,10 +21,10 @@
   </system.codedom>
   <!-- configuración base de datos en somee.com SQL SERVER 2019 -->
   <appSettings>
-    <add key="ipBaseDatos" value="."/><!-- . es localhost -->
+    <add key="ipBaseDatos" value="serviciosx.mssql.somee.com"/><!-- . es localhost -->
     <add key="nombreBaseDatos" value="serviciosx"/>
-    <add key="usuarioBaseDatos" value="Juan."/>
-    <add key="passwordBaseDatos" value="."/>
+    <add key="usuarioBaseDatos" value="JuanBustos_SQLLogin_1"/>
+    <add key="passwordBaseDatos" value="pjcxkxnor3"/>
     <add key="timeOutSqlServer" value="90"/>
   </appSettings>
 
