--- a/Servicios.csproj
+++ b/Servicios.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="system\AuthUser.cs" />
     <Compile Include="system\DataJson.cs" />
     <Compile Include="system\DatosEnlace.cs" />
     <Compile Include="system\EnlaceSqlServer.cs" />
